add_executable(flen flen.c)
add_executable(big big.c)
add_executable(ftype ftype.c)
add_executable(ftype2 ftype2.c)
add_executable(umask_test umask_test.c)
add_executable(glob glob.c)
add_executable(readdir readdir.c)
add_executable(mydu mydu.c)
add_executable(mydu2 mydu2.c)
add_executable(username username.c)
add_executable(timelog timelog.c)
add_executable(timelog2 timelog2.c)
add_executable(100day 100day.c)
add_executable(atexit atexit.c)
add_executable(mydate mydate.c)
add_executable(myenviron myenv.c)
add_executable(getenv getenv.c)