add_executable(fork1 fork1.c)
add_executable(primer0 primer0.c)
add_executable(primer1 primer1.c)
add_executable(primerN primerN.c)
add_executable(exec exec.c)
add_executable(few few.c)
add_executable(sleep1 sleep1.c)
add_executable(myshell myshell.c)
# add_executable(shell shell2.c)
add_executable(mysu mysu.c)
add_executable(system system.c)
add_executable(mydaemon mydaemon.c)
add_executable(daemon daemon.c)